# S52

./: CMakeLists.txt  Makefile  S52.c  S52.h  S52CS.c  S52GL.c  S52GL.h  S52PL.c  S52PL.h  S52utils.c  S57data.c  S57data.h  S57gv.c  S57gv.h  S57ogr.c  main.cpp  project.json
